--- a/views/editarNoticia.ejs
+++ b/views/editarNoticia.ejs
@@ -21,7 +21,7 @@
         <label for="texto_materia">Texto da Matéria:</label>
         <input type="text" name="texto" id="texto" value="<%= a1.texto_materia %>"><br>
         <label for="autor">Autor:</label>
-        <input type="autor" name="autor" id="autor" value="<%= a1.value %>"><br>
+        <input type="autor" name="autor" id="autor" value="<%= a1.autor %>"><br>
         
         <input type="submit" name="Cadastrar" id="cadastrar">
     </form>
