views e rotas ajustadas

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,5 +8,10 @@
 </head>
 <body>
         <h1>Página index da aplicação</h1>
+
+        <ul>
+            <li><a href="/noticias/cadastroNoticia">Cadastro</a></li>
+            <li><a href="/noticias/listarNoticias">Listar</a></li>
+        </ul>
 </body>
 </html>
